--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^5.5.0",
     "@fontsource-variable/open-sans": "^5.0.29",
     "@fontsource/chewy": "^5.0.12",
     "astro": "^4.11.5",
