--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@fontsource/chewy": "^5.0.12",
     "astro": "^4.11.5",
     "resend": "^3.5.0",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "tinacms": "^2.1.1"
+  },
+  "devDependencies": {
+    "@tinacms/cli": "^1.5.53"
   }
 }
