--- a/public/admyn/config.yml
+++ b/public/admyn/config.yml
@@ -1,8 +1,7 @@
 backend:
   name: git-gateway
   repo: senseikoder/happy-tail
-  branch: main # Branch to update (optional; defaults to master)
-  # This line should *not* be indented
+  branch: master # Branch to update (optional; defaults to master)
 media_folder: "/uploads"
 public_folder: "/uploads"
 collections:
