--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@fontsource/chewy": "^5.0.12",
     "astro": "^4.11.5",
     "resend": "^3.5.0",
-    "sass": "^1.77.8",
-    "tinacms": "^2.1.1"
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@tinacms/cli": "^1.5.53"
