--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: git-gateway
   repo: senseikoder/happy-tail
   branch: master # Branch to update (optional; defaults to master)
+  site_url: https://happytailgrooming.com
+  display_url: https://happytailgrooming.com
 media_folder: "/public/uploads"
 public_folder: "/public/uploads"
 collections:
