--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,14 +2,13 @@ backend:
   name: git-gateway
   repo: senseikoder/happy-tail
   branch: master # Branch to update (optional; defaults to master)
-  site_url: https://happytailgrooming.com
-  display_url: https://happytailgrooming.com
-media_folder: "/public/uploads"
-public_folder: "/public/uploads"
+media_folder: "public/uploads"
+public_folder: "public/uploads"
+logo_url: "https://i.postimg.cc/1t8phTCg/logo-Happy-Tail-Grooming-mobile.png"
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "content/posts" # The path to the folder where the documents are stored
+    folder: "src/content/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
