--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -5,15 +5,22 @@ backend:
 media_folder: "public/uploads"
 public_folder: "public/uploads"
 logo_url: "https://i.postimg.cc/1t8phTCg/logo-Happy-Tail-Grooming-mobile.png"
+display_url: https://happytailgrooming.com
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "src/content" # The path to the folder where the documents are stored
+    folder: "src/content/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "image", widget: "image" }
+      - { label: "Date", name: "date", widget: "datetime" }
+      - label: "Featured Image"
+        name: "image"
+        widget: "image" 
+        fields:
+          - label: Alt
+            name: alt
+            widget: string
       - { label: "Body", name: "body", widget: "markdown" }
