--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   repo: senseikoder/happy-tail
   branch: master # Branch to update (optional; defaults to master)
-media_folder: "public/uploads"
+media_folder: "src/uploads"
 logo_url: "https://i.postimg.cc/1t8phTCg/logo-Happy-Tail-Grooming-mobile.png"
 display_url: https://happytailgrooming.com
 collections:
