--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: senseikoder/happy-tail
   branch: master # Branch to update (optional; defaults to master)
   
-media_folder: "src/uploads"
+media_folder: "public/uploads"
 public_folder: "uploads"
 
 logo_url: "https://i.postimg.cc/1t8phTCg/logo-Happy-Tail-Grooming-mobile.png"
