--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,25 +4,28 @@ backend:
   branch: master # Branch to update (optional; defaults to master)
   
 media_folder: "public/uploads"
-public_folder: "uploads"
+public_folder: "/uploads"
 
 logo_url: "https://i.postimg.cc/1t8phTCg/logo-Happy-Tail-Grooming-mobile.png"
-display_url: https://happytailgrooming.com
+display_url: https://happytailgrooming.com/blog
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
     folder: "src/content/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Description", name: "description", widget: "string" }
+      - {label: "Draft", name: "draft", widget: "boolean", default: true}
       - label: "Featured Image"
         name: "image"
-        widget: "image" 
+        widget: "object"
+        summary: 'Pic: {{fields.url}}  - Alt text: {{fields.alt}}'
         fields:
-          - label: Alt
-            name: alt
-            widget: string
+          - {label: "Url", name: "url", widget: "image", choose_url: false}
+          - {label: "Alt", name: "alt", widget: "string"}
       - { label: "Body", name: "body", widget: "markdown" }
+      
