--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "@fontsource-variable/open-sans": "^5.0.29",
     "@fontsource/chewy": "^5.0.12",
     "astro": "^4.11.5",
+    "flickity": "^3.0.0",
     "resend": "^3.5.0",
     "sass": "^1.77.8"
-  },
-  "devDependencies": {
-    "@tinacms/cli": "^1.5.53"
   }
 }
